--- a/angular.json
+++ b/angular.json
@@ -46,12 +46,6 @@
                   "maximumError": "4kb"
                 }
               ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
               "outputHashing": "all"
             },
             "development": {
@@ -69,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-lazy-loading:build:production"
+              "buildTarget": "ng-lazy-loading:build:production"
             },
             "development": {
-              "browserTarget": "ng-lazy-loading:build:development"
+              "buildTarget": "ng-lazy-loading:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-lazy-loading:build"
+            "buildTarget": "ng-lazy-loading:build"
           }
         },
         "test": {
